k8s/deploy-webstatus.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: webstatus
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: webstatus
    spec:
      containers:
        - name: webstatus
          image: ericuss/webstatus:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:  
  name: webstatus-service
spec:
  selector:    
    app: webstatus
  type: ClusterIP
  ports:  
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
# apiVersion: v1
# kind: Service
# metadata:
#   name: webstatus
# spec:
#   ports:
#   - port: 80
#     targetPort: 80
#     protocol: TCP
#     name: http
#   selector:
#     app: webstatus
#   type: LoadBalancer
